Fixed Overflow scrolling

--- a/Ex2/style.css
+++ b/Ex2/style.css
@@ -52,7 +52,7 @@ footer > span, a {
     height: auto;
     display:flex;
     justify-content: center;
-    padding: 10vh; 
+    padding: 9.7vh; 
 }
 
 #grid {
